cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_37.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:62: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:62:13: Write of unused value
60.               l2c(tout0, out);
61.               tout1 = tin[1] ^ outW1;
62.               l2c(tout1, out);
                  ^
63.           }
64.           iv = &(*ivec)[0];
